--- a/tamplates/Mestre.html
+++ b/tamplates/Mestre.html
@@ -139,6 +139,6 @@
         </div>
     </div>
 
-    <script type="module" src="/static/js/mestre.js"></script>
+    <script  src="/static/js/mestre.js"></script>
 </body>
 </html>
