--- a/tamplates/monstruario.html
+++ b/tamplates/monstruario.html
@@ -58,6 +58,6 @@
     <p></p>
     <p class="copy">© 2024 Projeto baseado Jogos Vorazes - Desenvolvido por Chapeleiro</p>
 </footer>
-    <script type="module" src="/static/js/monstruario.js"></script>
+    <script  src="/static/js/monstruario.js"></script>
 </body>
 </html>
