--- a/tamplates/termos.html
+++ b/tamplates/termos.html
@@ -103,6 +103,6 @@
 </body>
 </html>
 
-<script type="module" src="/static/js/termos.js"></script>
+<script src="/static/js/termos.js"></script>
 </body>
 </html>
